apps/rdt-client/rdt-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rdt-client
  namespace: rdt-client
  labels:
    app: rdt-client
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rdt-client
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: rdt-client
    spec:
      containers:
      - name: rdt-client
        image: erix12/rdt-client-manual-download:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 6500
        livenessProbe:
          httpGet:
            path: /
            port: 6500
          initialDelaySeconds: 30
          periodSeconds: 30
          timeoutSeconds: 10
          failureThreshold: 3
        volumeMounts:
        - mountPath: /data/downloads
          name: rdt-downloads
        - mountPath: /data/db
          name: rdt-db

      - name: filebot
        image: jlesage/filebot:latest
        volumeMounts:
        - mountPath: /downloads
          name: rdt-downloads
        - mountPath: /media
          name: rdt-media
        - mountPath: /config
          name: filebot-config

      - name: filebot-trigger
        image: jlesage/filebot:latest
        command: ['sh', '/scripts/trigger.sh']
        volumeMounts:
        - mountPath: /downloads
          name: rdt-downloads
        - mountPath: /media
          name: rdt-media
        - mountPath: /config
          name: filebot-config
        - mountPath: /scripts
          name: filebot-trigger-script

      volumes:
      - name: rdt-downloads
        persistentVolumeClaim:
          claimName: rdt-downloads-pvc
      - name: rdt-db
        persistentVolumeClaim:
          claimName: rdt-db-pvc
      - name: rdt-media
        persistentVolumeClaim:
          claimName: rdt-media-pvc
      - name: filebot-license
        secret:
          secretName: filebot-license
      - name: filebot-config
        emptyDir: {}
      - name: filebot-trigger-script
        configMap:
          name: filebot-trigger-script
          defaultMode: 0755
