apps/rdt-client/rdt-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rdt-client
  namespace: rdt-client
spec:
  type: ClusterIP
  selector:
    app: rdt-client
  ports:
    - port: 6500
      targetPort: 6500
      protocol: TCP
      name: web
