apps/rdt-client/rdt-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rdt-client-ingress
  namespace: rdt-client
spec:
  ingressClassName: traefik
  rules:
    - host: rdt.erix-homelab.site
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: rdt-client
                port:
                  number: 6500
  tls:
    - hosts:
        - rdt.erix-homelab.site
      secretName: erix-homelab-site-tls
